[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Font/SouciSansNF.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Sprites/jack_input.png" type="Texture" id=2]
[ext_resource path="res://Scripts/JackInput.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/indicator_fx.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/click2.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sprites/jack_output.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 11.3416

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "InputAnimation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("InputIndicator:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.183011, 3.605 ),
"update": 0,
"values": [ Color( 0.705882, 0.701961, 0.196078, 0.439216 ), Color( 0.733333, 0.74902, 0.258824, 0.972549 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "OutputAnimation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("OutputIndicator:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.183011, 3.605 ),
"update": 0,
"values": [ Color( 0.705882, 0.701961, 0.196078, 0.439216 ), Color( 0.733333, 0.74902, 0.258824, 0.972549 ) ]
}

[node name="JackInput" type="Node2D"]
script = ExtResource( 3 )

[node name="InputIndicator" type="Sprite" parent="."]
modulate = Color( 0.705882, 0.701961, 0.196078, 0.439216 )
position = Vector2( 0.275442, -31.2513 )
scale = Vector2( 0.948157, 0.948157 )
texture = ExtResource( 4 )

[node name="OutputIndicator" type="Sprite" parent="."]
visible = false
modulate = Color( 0.705882, 0.701961, 0.196078, 0.439216 )
position = Vector2( 79.1734, 0.219849 )
scale = Vector2( 5.58293, 0.711488 )
texture = ExtResource( 4 )

[node name="Input" type="Sprite" parent="."]
position = Vector2( 0.209644, -15.2885 )
scale = Vector2( 0.211082, 0.211082 )
skew = 4.37114e-08
texture = ExtResource( 2 )

[node name="Output" type="Sprite" parent="."]
visible = false
position = Vector2( 56.7346, 0.158451 )
scale = Vector2( 0.152969, 0.152969 )
skew = 4.37114e-08
texture = ExtResource( 6 )

[node name="InputArea" type="Area2D" parent="."]
position = Vector2( -11.2386, -42.5703 )
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InputArea"]
position = Vector2( 11.2943, 42.7358 )
shape = SubResource( 1 )

[node name="LabelInput" type="Label" parent="."]
margin_left = -15.2501
margin_top = -54.2202
margin_right = 16.7499
margin_bottom = -8.22019
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelOutput" type="Label" parent="."]
visible = false
margin_left = 27.2797
margin_top = -22.4392
margin_right = 59.2797
margin_bottom = 23.5608
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputPlayer" type="AnimationPlayer" parent="."]
anims/InputAnimation = SubResource( 3 )

[node name="OutputPlayer" type="AnimationPlayer" parent="."]
anims/OutputAnimation = SubResource( 4 )

[node name="OnOverSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="area_entered" from="InputArea" to="." method="_on_jack_area_entered"]
[connection signal="input_event" from="InputArea" to="." method="_on_InputArea_input_event"]
